# SPDX-License-Identifier: GPL-2.0-or-later
EXTRA_DIST =\
 CMakeLists.txt\
 README.txt TODO.txt LICENSE_APPENDIX.txt\
 maxima-icon.bmp maxima-icon.ico maxima-icon.svg maxima-installerimage.bmp\
 wine-clisp.sh.tmpl wine-lisp.sh.tmpl wine-sbcl.sh.tmpl wine-ccl.sh.tmpl\
 wine-ecl.sh.tmpl sbcl.sh licenses.html\
 lispselector.bat lispselector.tcl\
 xmaxima.bat downloads/.keep\
 gnuplot/CMakeLists.txt sbcl/CMakeLists.txt tcltk/CMakeLists.txt abcl/CMakeLists.txt ccl/CMakeLists.txt\
 vtk/CMakeLists.txt wine/CMakeLists.txt wxmaxima/CMakeLists.txt wxwidgets/CMakeLists.txt\
 texinfo/CMakeLists.txt maxima_longnames.c clisp/CMakeLists.txt \
 ecl/strm_os.d ecl/CMakeLists.txt
