EXTRA_DIST = x-mac.xml x-maxima-out.xml \
  text-x-maximasession.svg text-x-maxima-out.svg maxima rmaxima xmaxima \
  Xmaxima.desktop

appinfodir = $(datarootdir)/metainfo
dist_appinfo_DATA = net.sourceforge.maxima.xmaxima.appdata.xml

mimedatadir = $(datarootdir)/mime/packages
dist_mimedata_DATA = x-mac.xml x-maxima-out.xml

appicondir = $(datarootdir)/icons
dist_appicon_DATA = text-x-maximasession.svg text-x-maxima-out.svg

bashcompletiondir = ${datarootdir}/bash-completion/completions
bashcompletion_DATA = maxima rmaxima xmaxima

desktopdir = $(datarootdir)/applications
dist_desktop_DATA = Xmaxima.desktop

