SUBDIRS = info man intromax share emaxima

genericdir = $(docdir)

genericdirDATA = \
contributors\
implementation/dir_vars.txt\
implementation/external-interface.txt\
maximabook/Makefile\
maximabook/README\
maximabook/maxima.bib\
maximabook/TODO\
maximabook/algcal/algcal.tex\
maximabook/maxima.tex\
maximabook/basics/basics.tex\
maximabook/examples/examples.tex\
maximabook/images/2dplotwindow.eps\
maximabook/images/2dplotwindow.png\
maximabook/images/3dplotwindow.eps\
maximabook/images/3dplotwindow.png\
maximabook/images/emacsmaximamodeshot.eps\
maximabook/images/emacsmaximamodeshot.png\
maximabook/images/emacsshot.eps\
maximabook/images/emacsshot.png\
maximabook/images/emaximashot.eps\
maximabook/images/emaximashot.png\
maximabook/images/imaxima.eps\
maximabook/images/imaxima.png\
maximabook/images/maximawindowsinstall1.eps\
maximabook/images/maximawindowsinstall1.png\
maximabook/images/maxima_geomview.eps\
maximabook/images/maxima_geomview.png\
maximabook/images/maxima_gnuplot.eps\
maximabook/images/maxima_gnuplot.png\
maximabook/images/maxima_openmath.eps\
maximabook/images/maxima_openmath.png\
maximabook/images/symaxx.eps\
maximabook/images/symaxx.png\
maximabook/images/symaxxoutput.png\
maximabook/images/symaxxoutput.ps\
maximabook/images/terminalshot.eps\
maximabook/images/terminalshot.png\
maximabook/images/texmacs.eps\
maximabook/images/texmacs.png\
maximabook/images/xmaxima.eps\
maximabook/images/xmaxima.png\
maximabook/install/install.tex\
maximabook/interfaces/interfaces.tex\
maximabook/introduction/introduction.tex\
maximabook/maxims/maxims.tex\
maximabook/odes/advmath.tex\
maximabook/odes/odes.tex\
maximabook/output/izicinfo.txt\
maximabook/output/output.tex\
maximabook/preface/pref.tex\
maximabook/programming/prog.tex\
maximabook/README\
maximabook/share/calculus/pdiff.tex\
maximabook/share/physics/dimension.tex\
maximabook/storage/bibarchive/axiom.bib\
maximabook/storage/bibarchive/higherordersymbcomput.bib\
maximabook/storage/bibarchive/jsymcomp.bib\
maximabook/storage/bibarchive/lispsymbcomput.bib\
maximabook/storage/bibarchive/macsyma.bib\
maximabook/storage/bibarchive/maple-extract.bib\
maximabook/storage/bibarchive/maple-tech.bib\
maximabook/storage/bibarchive/mathematica.bib\
maximabook/storage/bibarchive/redbooks.bib\
maximabook/storage/bibarchive/redextra.bib\
maximabook/storage/bibarchive/reduce.bib\
maximabook/storage/bibarchive/red-a-f.bib\
maximabook/storage/bibarchive/red-g-l.bib\
maximabook/storage/bibarchive/red-m-z.bib\
maximabook/storage/bibarchive/sigsam.bib\
maximabook/storage/primer/primer.tex\
misc/completescanoffunctionssortedbybytecodelength.txt\
misc/grepforvariables.sh\
misc/maximafunctions.txt\
misc/maximafunctionsundocumented.txt\
misc/maximaitemspresentinbothfunctionandvariablescans.txt\
misc/maximavariables.txt\
misc/maximavariablesundocumented.txt\
misc/processlisfiles.sh\
misc/weirdvariables.txt\
misc/workingvariables.txt\
misc/x.awk

EXTRA_DIST = $(genericdirDATA)
include $(top_srcdir)/common.mk

