SUBDIRS = info man intromax share emaxima

genericdir = $(docdir)

genericdirDATA = \
contributors\
implementation/dir_vars.txt\
implementation/external-interface.txt\
implementation/maximatoplevelflow.dot\
implementation/maximatoplevelflow.png\
implementation/maximatoplevelflow.ps\
implementation/sloop-loop-changes.txt

EXTRA_DIST = $(genericdirDATA)
include $(top_srcdir)/common.mk

