include $(top_srcdir)/common.mk
genericdir =$(sharedir)

genericdirDATA = diffequations/desoln.usg\
diffequations/ode2.usg\
diffequations/exampl.mac\
diffequations/pdvtr.mac\
diffequations/phypgm.mac\
diffequations/pivtr.mac\
diffequations/pmain.mac\
diffequations/linde1.mc\
diffequations/abel.mac\
diffequations/desoln.mac\
diffequations/ode2.mac\
diffequations/odeaux.mac\
misc/dump.lisp\
misc/dump.usg\
misc/declin.dem\
misc/declin.mac\
misc/declin.usg\
misc/diffop.lisp\
misc/foptim.lisp\
misc/seqopt.dem\
misc/seqopt.lisp\
misc/seqopt.usg\
misc/arrfun.mac\
misc/disran.lisp\
misc/disran.usg\
misc/set.lisp\
misc/set.usg\
misc/smacro.mac\
matrix/eigen.dem\
matrix/eigen_1.dem\
matrix/eigeni.mac\
matrix/eigen.mac\
matrix/eigen.usg\
matrix/matfun.mac\
matrix/rateig.mac\
matrix/determ.mac\
matrix/determ.usg\
matrix/invert.usg\
matrix/nchrpl.dem\
matrix/nchrpl.mac\
matrix/pfaff.dem\
matrix/pfaff.mac\
matrix/pfaff.usg\
matrix/invert.mac\
specfunctions/ellipt.lisp\
specfunctions/ellipt.usg\
specfunctions/specfun.mac\
specfunctions/airy.lisp\
specfunctions/airy.usg\
specfunctions/gamma.mac\
specfunctions/kn.mac\
numeric/fft.dem\
numeric/fft.lisp\
numeric/fft.usg\
numeric/forma1.lisp\
numeric/forma1.usg\
numeric/format.lisp\
numeric/format.usg\
numeric/newton.mac\
numeric/newton1.mac\
numeric/riemsum.mac\
numeric/simpsn.dem\
numeric/cfortr.dem\
numeric/cfortr.lisp\
numeric/cfortr.tst\
numeric/cfortr.usg\
numeric/dblint.dem\
numeric/dblint_1.dem\
numeric/dblint.mac\
numeric/dblint.usg\
numeric/expense.lisp\
numeric/kach.dem\
numeric/kach.mac\
numeric/qq.dem\
numeric/qq.lisp\
numeric/qq.usg\
numeric/bffac.lisp\
numeric/bffac.usg\
numeric/brmbrg.lisp\
numeric/brmbrg.usg\
numeric/diffeq.dem\
numeric/diffeq.mac\
numeric/simpsn.mac\
numeric/submac.dem\
numeric/submac.mac\
utils/fileop.lisp\
utils/fileop.usg\
utils/batch.transcript\
utils/batch.dem\
utils/batch.mac\
utils/batch.usg\
utils/dskuse.lisp\
utils/dskuse.usg\
utils/mactex-utilities.lisp\
simplification/functs.dem\
simplification/functs.mac\
simplification/functs.usg\
simplification/absimp.dem\
simplification/absimp.mac\
simplification/absimp.usg\
simplification/elim.usg\
simplification/facex1.mac\
simplification/facexp.dem\
simplification/facexp.mac\
simplification/facexp.usg\
simplification/ineq.dem\
simplification/ineq.mac\
simplification/ineq.usg\
simplification/rducon.dem\
simplification/rducon.lisp\
simplification/rducon.usg\
simplification/rncomb.dem\
simplification/rncomb.mac\
simplification/rncomb.usg\
simplification/scifac.dem\
simplification/scifac.lisp\
simplification/scifac.usg\
simplification/stopex.dem\
simplification/stopex.mac\
simplification/stopex.usg\
simplification/disol.dem\
simplification/disol.mac\
simplification/disol.usg\
simplification/lrats.dem\
simplification/lrats.mac\
simplification/lrats.usg\
simplification/sqdnst.mac\
simplification/sqdnst.usg\
simplification/elim.mac\
physics/gamalg.lisp\
physics/gamalg.dem\
physics/gamalg.usg\
physics/units.mac\
physics/units.usg\
physics/dimen.dem\
physics/dimen.mac\
physics/dimen.usg\
physics/elec.lisp\
physics/gam5.lisp\
physics/gamchi.lisp\
physics/gamcon.lisp\
physics/gamgfi.lisp\
physics/gamkah.lisp\
physics/gammtr.lisp\
physics/gamnoc.lisp\
physics/gamsq.lisp\
physics/physconst.mac\
physics/physconst.usg\
physics/dimension.html\
physics/dimension.mac\
physics/dimension.pdf\
physics/dimension.tex\
algebra/gcdex.mac\
algebra/grob1.lisp\
algebra/nusum.usg\
algebra/recur.dem\
algebra/recur.lisp\
algebra/recur.mac\
algebra/recur.transcript\
algebra/differ.dem\
algebra/differ.mac\
algebra/nusum.mac\
calculus/pade2.mac\
calculus/qual.dem\
calculus/qual.mac\
calculus/qualsp.lisp\
calculus/qual.usg\
calculus/taylor1.mac\
calculus/fourie.dem\
calculus/fourie.mac\
calculus/fourie.usg\
calculus/cartan.dem\
calculus/cartan.lisp\
calculus/gendif.mac\
calculus/gendif.usg\
calculus/optmiz.dem\
calculus/optmiz_1.dem\
calculus/optmiz_2.dem\
calculus/optmiz_3.dem\
calculus/optmiz_4.dem\
calculus/optmiz.mac\
calculus/optmiz.transcript\
calculus/optmiz.usg\
calculus/optvar.dem\
calculus/optvar_1.dem\
calculus/optvar_2.dem\
calculus/optvar.mac\
calculus/optvar.transcript\
calculus/optvar.usg\
calculus/revert.mac\
calculus/revert.usg\
share.usg\
trigonometry/trigrat.lisp\
trigonometry/atrig1.mac\
trigonometry/atrig1.usg\
trigonometry/ntrig.mac\
trigonometry/ntrig.usg\
trigonometry/spangl.mac\
trigonometry/spangl.usg\
vector/vect.dem\
vector/vect.mac\
vector/vect_transform.mac\
vector/vect.usg\
vector/vector.dem\
vector/vector.mac\
vector/vector.usg\
graphics/world.mac\
combinatorics/comgen.lisp\
combinatorics/permut.lisp\
integration/delta.dem\
integration/delta.mac\
integration/delta.usg\
integration/intsce.mac\
integration/intsce.usg\
integration/antid.dem\
integration/antid.mac\
integration/antid.usg\
integration/bypart.mac\
integequations/inteqn.mac\
integequations/inteqn.usg\
integequations/intexs.mac\
macro/autolo.mac\
macro/basic.mac\
macro/caseq.mac\
macro/contrl.mac\
macro/defm.dem\
macro/defm.mac\
macro/defm.syn\
macro/defstm.mac\
macro/defstmrun.mac\
macro/fexpr.mac\
macro/keyarg.dem\
macro/keyarg.mac\
macro/packg.mac\
macro/sum1.mac\
sym/arite.lisp\
sym/chbase.lisp\
sym/compile.lisp\
sym/direct.lisp\
sym/doconline\
sym/docsymidx.tex\
sym/docsym.tex\
sym/ecrivain.lisp\
sym/elem.lisp\
sym/kak.lisp\
sym/lecteur.lisp\
sym/macros.lisp\
sym/makefile\
sym/multmon.lisp\
sym/operations.lisp\
sym/partpol.lisp\
sym/permut.lisp\
sym/pui.lisp\
sym/resolcayley.lisp\
sym/resolv1.lisp\
sym/resolvante.mac\
sym/schur.lisp\
sym/sym1.mac\
sym/sym.mac\
sym/treillis.lisp\
sym/tri.lisp\
sym/util.lisp\
tensor/aaricc_bsc.mac\
tensor/aaricc_spl.mac\
tensor/aaricc.mac\
tensor/aatest.mac\
tensor/ademo2.dem\
tensor/ademo.dem\
tensor/ajpff.mac\
tensor/motion.mac\
tensor/anew_add.mac\
tensor/anew.mac\
tensor/birkhoff.txt\
tensor/rsn.mac\
tensor/brans_bmb.mac\
tensor/brans_vacuum.mac\
tensor/brbirk.mac\
tensor/canten.lisp\
tensor/ctenso_1.dem\
tensor/ctenso_2.dem\
tensor/ctenso_3.dem\
tensor/ctenso_4.dem\
tensor/ctensr.mac\
tensor/gener.lisp\
tensor/info-tensor.txt\
tensor/itensor.lisp\
tensor/jpff.mac\
tensor/manual.txt\
tensor/metrics.mac\
tensor/mmans.mac\
tensor/mmans_run.mac\
tensor/petrov.mac\
tensor/ricci2.mac\
tensor/symtry.lisp\
tensor/tensor-doc.txt\
tensor/info-tensor-2.txt\
tensor/test1.mac\
contrib/diag.usg\
contrib/diag.mac\
contrib/lindstedt.mac


